# PPSA

./: Aggregator_RNS.h  CKKS_Aggregator.h  CKKS_Encoder.h  CMakeLists.txt  DiscreteLaplacian.h  Makefile  Polynomial.h  a.out  aggregation.cpp  numbertheory.h  polyutils.h  slap  utils.h
openfhe-development-main/: CMakeLists.txt
